--- a/.ansible/docker_restart/tasks/main.yml
+++ b/.ansible/docker_restart/tasks/main.yml
@@ -14,6 +14,6 @@
     recreate: true
     restart: true
     ports:
-      - "{{ APP_PORT }}":"{{ APP_PORT }}"
+      - "{{ APP_PORT }}:{{ APP_PORT }}"
     env:
       NODE_ENV: "{{ NODE_ENV }}"
